--- a/css/styles.css
+++ b/css/styles.css
@@ -15,20 +15,60 @@ body {
 }
 
 article {
-    max-width: 500px;
+    background-color: #171b25;
+    max-width: 800px;
+    margin: 0 1em;
     border: 1px solid #555;
-    padding: 2em;
+    padding: 1.5em;
     border-radius: 10px;
 
-    h1 {
-        font-size: 1.5rem;
-        color: blueviolet;
+    header {
+        display: flex;
+        align-items: center;
+        gap: .7em;
+
+        .profile-picture {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: yellowgreen;
+        }
+
+        h1 {
+            font-size: 14px;
+            color: white;
+            font-weight: 500;
+        }
+
+        span {
+            display: block;
+            width: 3px;
+            height: 3px;
+            background-color: gray;
+            border-radius: 50%;
+        }
+
+        h2 {
+            font-size: 11px;
+            color: #aaa;
+            font-weight: 500;
+        }
     }
 
-    h2 {
-        font-size: 1rem;
-        color: #333;
+    .content {
+        margin-top: 1em;
+        margin-left: 3em;
+
+        p {
+            color: #aaa;
+            font-size: 14px;
+        }
     }
+
+
+
+
+
 
     hr {
         margin: 10px 0;
