--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
 
 article {
     background-color: #171b25;
+    box-shadow: 0 5px 10px 0 #00000044;
     max-width: 800px;
     margin: 0 1em;
     border: 1px solid #555;
