--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,14 @@ article {
             width: 40px;
             height: 40px;
             border-radius: 50%;
+            overflow: hidden;
             background-color: yellowgreen;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
 
         h1 {
